[tool.poetry]
name = "jmeslog"
version = "0.2.0"
description = "Tool for managing changelogs"
authors = [
    "James Saryerwinnie <js@jamesls.com>",
]
license = "Apache-2.0"
readme = "README.md"

documentation = "https://jamesls.github.io/jmeslog"
homepage = "https://jamesls.github.io/jmeslog"
repository = "https://github.com/jamesls/jmeslog"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "jmeslog", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9.0, <4.0"
Jinja2 = "^3.1.4"
packaging = "^24.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
mkdocstrings = "*"
mkdocs-material = "*"
pymdown-extensions = "*"
pytest-github-actions-annotate-failures = "*"
poethepoet = "*"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = """\
    --cov jmeslog \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
# Bump this up as we add coverage
fail_under = 77
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
exclude = ['tests/']


[tool.poe.tasks]
pre-commit = "poetry run pre-commit run --all-files"
check = [
  { cmd = "poetry run ruff check ." },
  { cmd = "poetry run ruff format --diff ." },
  { cmd = "mypy ." },
]
test = "poetry run pytest tests/"
stage-release = "python3 ./scripts/stage-release --output staged-release.zip"
format-code = [
  { cmd = "poetry run ruff format ." },
]
prcheck = ["pre-commit", "check", "test"]

[tool.poetry.scripts]
jmeslog = "jmeslog.cli:main"
